- Ajout de la classe JwtSettings.cs dans le dossier Shared/Settings - Mise en place du binding de la configuration Jwt dans Program.cs via builder.Configuration.GetSection("Jwt") - Ajout du using Haelya.Shared.Settings - Préparation à l’utilisation future de IOptions<JwtSettings> pour centraliser la config JWT

--- a/backend/Haelya.Api/appsettings.Example.json
+++ b/backend/Haelya.Api/appsettings.Example.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Your ConnectionString"
+  },
+  "Jwt": {
+    "Key": "TO_REPLACE_WITH_SECURE_KEY",
+    "Issuer": "Haelya.Api",
+    "Audience": "Haelya.Client",
+    "ExpiresInMinutes": 60
   }
 }
