--- a/backend/Haelya.Infrastructure/Haelya.Infrastructure.csproj
+++ b/backend/Haelya.Infrastructure/Haelya.Infrastructure.csproj
@@ -26,6 +26,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.7" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
 
 </Project>
