Back | Finalisation complète du module utilisateur (CRUD + sécurité)

--- a/backend/Haely.Application/Haelya.Application.csproj
+++ b/backend/Haely.Application/Haelya.Application.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Haelya.Domain\Haelya.Domain.csproj" />
+	 <ProjectReference Include="..\Haelya.Shared\Haelya.Shared.csproj" />
   </ItemGroup>
 
 </Project>
