--- a/backend/Haelya.Infrastructure/Haelya.Infrastructure.csproj
+++ b/backend/Haelya.Infrastructure/Haelya.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Haely.Application\Haelya.Application.csproj" />
     <ProjectReference Include="..\Haelya.Domain\Haelya.Domain.csproj" />
     <ProjectReference Include="..\Haelya.Shared\Haelya.Shared.csproj" />
   </ItemGroup>
