--- a/frontend/haelya-front/angular.json
+++ b/frontend/haelya-front/angular.json
@@ -33,13 +33,20 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/normalize.css",
               "src/assets/css/vendor.css",
               "src/assets/css/style.css",
               "src/assets/css/icomoon.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/swiper/swiper.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/swiper/swiper-element-bundle.min.js",
+              "src/assets/js/plugins.js",
+              "src/assets/js/script.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
