--- a/frontend/haelya-front/angular.json
+++ b/frontend/haelya-front/angular.json
@@ -43,9 +43,8 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/swiper/swiper-element-bundle.min.js",
-              "src/assets/js/plugins.js",
-              "src/assets/js/script.js"
+              "node_modules/swiper/swiper-element-bundle.min.js"
+              
             ],
             "server": "src/main.server.ts",
             "prerender": true,
