--- a/frontend/haelya-front/package.json
+++ b/frontend/haelya-front/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.12",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
